update css frame

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
 
       <section id="imagenes" class="section-imagenes">
-        <h1>Fotitos impoetantes y recuerdos que tenemos</h1>
+        <h1>Fotitos IMPORTANTES y recuerdos que tenemos</h1>
         <img src="./assets/ma/6951495.jpg" alt="" />
         <img src="./assets/ma/Imagen de WhatsApp 2024-08-15 a las 12.40.40_3f5ea813.jpg" alt="" />
         <img src="./assets/ma/Imagen de WhatsApp 2024-08-15 a las 12.40.40_595fbd9e.jpg" alt="" />
